--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-Library/
+/Library/
 [Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
